--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,10 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "blog/base.html" %}
+{% block title %}All blogs{% endblock title %}
+{% block content %}
+  
+<h1>Bonjour</h1>
+
+<table class="table">
+<thead>
+<tr>
+  <th scope="col">id</th>
+
+  <th scope="col">Title</th>
+  <th scope="col">Slug</th>
+  <th scope="col">Published</th>
+<th scope="col">Content</th>
+<th scope="col">Date</th>
+<th scope="col">Description</th>
+</tr>
+</thead>
+<tbody>
+{% for blog in all%}
+
+
+<tr>
+  <th scope="row">{{ blog.id }}</th>
+
+      <td><a href="{% url 'blog-post' slug=blog.slug %}">
+          {{ blog.title }}
+      </a></td>
+
+  <td>{{ blog.slug }}</td>
+  <td>{{ blog.published }}</td>
+    <td>{{ blog.content }}</td>
+    <td>{{ blog.date }}</td>
+    <td>{{ blog.description }}</td>
+
+</tr>
+        {% endfor %}
+</tbody>
+</table> 
+<!--{% for blog in all%}
+{% with categories=blog.category.count title=blog.title %}
+    <h1>
+        <a href="{% url 'blog-post' slug=blog.slug %}">
+         {{ forloop.counter }}. {{ title | lower }} {{ categories }}
+        </a>
+    </h1>
+    <p>
+      {{ blog.content | truncatewords:100|striptags|safe}}
+    </p>
+
+{% endwith %}
+{% endfor %} -->
+{% endblock content %}
